se agregó el módulo de agregar producto

--- a/css/agregar-producto.css
+++ b/css/agregar-producto.css
@@ -1,118 +1,108 @@
 body {
     font-family: Arial, Helvetica, sans-serif;
     margin: 0;
-   background: url(../img/fondo-login.jpg);
+    background: url(../img/fondo-login.jpg);
     background-size: cover;
     background-attachment: fixed;
 }
+
 * {
     box-sizing: border-box;
 }
-.contenedor{
+
+.contenedor {
     width: 100%;
     padding: 15px;
 }
-.formulario{
+
+.formulario {
     background: #fff;
     margin-top: 150px;
     padding: 3px;
 }
-h1{
+
+.form-group {
+    margin: 16px 0;
+}
+
+h1 {
     text-align: center;
     color: #1a2537;
     font-size: 40px;
 }
-input[type="text"],
-input[type="password"]{
-    font-size: 20px;
-    width: 82%;
-    padding: 10px;
-    border: none;
-}
-.input-contenedor{
+
+.input-contenedor {
     margin-bottom: 15px;
     border: 1px solid #aaa;
 }
-.icon{
-    min-width: 50px;
-    text-align: center;
-    color: #999;
-}
-.button{
+
+.button {
     border: none;
     width: 100%;
     color: white;
     font-size: 20px;
-    background:  #87314e;
-    
+    background: #87314e;
+
     padding: 15px 20px;
     border-radius: 5px;
     cursor: pointer;
 }
-.button:hover{
+
+.button:hover {
     background: cadetblue;
 }
-p{
+
+p {
     text-align: center;
 }
-.link{
+
+.link {
     text-decoration: none;
-      color: #87314e;
+    color: #87314e;
     font-weight: 600;
 }
-.link:hover{
-     color: cadetblue;
+
+.link:hover {
+    color: cadetblue;
 }
-@media(min-width:768px)
-{
-    .formulario{
+
+@media(min-width:768px) {
+    .formulario {
         margin: auto;
         width: 500px;
         margin-top: 150px;
         border-radius: 2%;
     }
 }
+
 .ok {
-	text-align: center;
-	width: 100%;
-	padding: 12px;
-	background-color: #1e6;
-    margin:52px 0px 0px 0px;
-	color: #fff
-}
-.bad {
-	text-align: center;
-	width: 100%;
-	padding: 12px;
-	background-color: #a22;
+    text-align: center;
+    width: 100%;
+    padding: 12px;
+    background-color: #1e6;
     margin: 52px 0px 0px 0px;
-	color: #fff
+    color: #fff
 }
 
+.bad {
+    text-align: center;
+    width: 100%;
+    padding: 12px;
+    background-color: #a22;
+    margin: 52px 0px 0px 0px;
+    color: #fff
+}
 
+.button-cancel {
+    background-color: white;
+    color: #87314e;
+    border: 1px solid #87314e;
+}
 
+.button-cancel:hover {
+    color: white;
+}
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+.mt-16 {
+    margin-top: 16px;
+}
